<resources>
    <string name="app_name">MarritLeenstra-pset2</string>
    <string name="welcome">Welcome to Mad Libs! Always liked telling stories? Than this is a great
        chance for you! You are going to provide the words to complete a story, however, you won\'t
        be able to see the complete story until the madness is done! No way back&#8230;
    </string>
    <string name="start">Let\'s start the fun!</string>
    <string name="Fill_In">Fill in the words to complete the story!</string>
    <string name="Next">Next</string>
    <string name="To_Story">Let\'s read your story!</string>
    <string name="Your_Story">Your mad story!</string>
    <string name="test"> One of the most /<adjective/> characters in fiction is named Tarzan of the
        /<plural-noun/>. Tarzan was raised by a/an /<noun/> and lives in the /<adjective/> jungle in the
        heart of darkest /<place/> . He spends most of his time eating /<plural-noun/> and swinging from
        tree to /<noun/>. Whenever he gets angry, he beats on his chest and says, " /<funny-noise/> !"
        This is his war cry. Tarzan always dresses in /<adjective/> shorts made from the skin of a/an
        /<noun/> and his best friend is a/an /<adjective/> chimpanzee named Cheetah. He is supposed to
        be able to speak to elephants and /<plural-noun/> . In the movies, Tarzan is played by
        /<persons-name/>".</string>
    <string name="done">Make another story</string>
    <string name="Toast_fill_in">Give a word!</string>
    <string name="draw">Madlib drawing</string>
</resources>
