<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="marrit.marritleenstra_pset2.StoryActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Your_Story"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/Story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        tools:text="@string/test"/>

    <Button
        android:id="@+id/button_restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="@string/done"/>

</LinearLayout>

