<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Fill_In"
        android:textSize="20sp"
        android:padding="20dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/Words_Left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:layout_gravity="center_horizontal"
        android:text="TODO: words left"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <EditText
            android:id="@+id/Give_Word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="TODO: GiveWord" />

        <Button
            android:id="@+id/OK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/Next"/>

    </LinearLayout>

    <Button
        android:id="@+id/To_Story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:padding="20dp"
        android:text="@string/To_Story"/>

</LinearLayout>